# cefbrowser

./: .gitignore  README.md  TODO  browserclient.cpp  browserclient.h  browserserver.cpp  browserserver.h  build-setup-arm.sh  build-setup-arm64.sh  build-setup-clang.sh  cef_includes.h  clang-sanitize  database.cpp  database.h  distzip.sh  filetype.cpp  httpinterception.cpp  httpinterception.h  httplib.cpp  jsinterception.cpp  jsinterception.h  keycodes.cpp  keycodes.h  lift.cpp  lift.h  logger.cpp  logger.h  main.cpp  mainapp.cpp  mainapp.h  meson-cross-file-debian-arm.conf  meson-cross-file-debian-arm64.conf  meson.build  meson_options.txt  moviestream.cpp  moviestream.h  pagemodifier.cpp  pagemodifier.h  requestresponse.cpp  requestresponse.h  (+17 more)
.github/workflows/: build-arm-cefbrowser-docker.yml  build-arm-cefbrowser.yml  build-cefbrowser-aarch64.yml  build-cefbrowser-arm.yml  build-cefbrowser-docker.yml  build-cefbrowser-x86.yml  build-cefbrowser.yml
start-scripte/: cefbrowser.service  corelec-docker-systemd.sh  start-docker.sh  start-local-dev.sh
static-content/application/iptv/: README  common.css  common.js  common2.js  debugscreen.css  debugscreen.js  index.html  keycodes.js  profiles.json
static-content/application/iptv/catalogue/: application.js  gridscrollview.js  gridview.js  gridviewbox.js  index.html  menu.css  menu.js  navigation.js
static-content/application/iptv/css/: blaze.css  main-interaction.css
static-content/application/iptv/js/: blaze-slider.dev.js  main-interaction.js  menu-carousel.js
static-content/application/iptv/videoplayer/: videoplayer_basic.js  videoplayer_oipf.js  vplayer.css
static-content/application/iptv/videoplayer/monitor/: monitor-base.js
static-content/application/main/: main-interaction.css  main-interaction.js  main.html
static-content/css/: videoquirks.css  volume.css
static-content/database/: Vodafone_West_hbbtv_urls.db  readme.txt  user_agent.ini
static-content/js/: font.js  hbbtv.js  init.js  initlast.js  keyhandler.js  mutation-summary.js  mutation-summary.js.map  simple-tinyduration.js  video_quirks.js  videoimage.html  videoobserver.js  volume.html  xhook-impl.js
subprojects/: cpp_httplib.wrap  curl.wrap  liblifthttp.wrap  libuv.wrap  sqlite3.wrap
subprojects/packagefiles/cpp-httplib-0.12.6/: meson.build
subprojects/packagefiles/liblifthttp/: meson.build
subprojects/packagefiles/libuv/: meson.build
subprojects/packagefiles/sqlite3-3.42/: meson.build
subprojects/packagefiles/sqlite3-3.49.1/: meson.build
test-tools/: common.cpp  common.h  ffmpeghandler.cpp  ffmpeghandler.h  vdr_tool.cpp
thrift-services/src-client/: VdrClient.cpp
xcompile/: arm64.cmake  armhf.cmake  meson-cross-file-debian-arm.conf  meson-cross-file-debian-arm64.conf
